--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="menu.html">Menu</a></li>
             </ul>
             <ul class="nav-links" style="width: 20%;">
-                <li><a href="/">Contact Us</a></li>
+                <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
     </header>
